--- a/app/src/main/res/layout/activity_onboard.xml
+++ b/app/src/main/res/layout/activity_onboard.xml
@@ -6,7 +6,7 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="375dp"
+        android:layout_width="match_parent"
         android:layout_height="444dp"
         android:layout_alignParentTop="true"
         android:scaleType="centerCrop"
