--- a/app/src/main/res/layout/activity_starter.xml
+++ b/app/src/main/res/layout/activity_starter.xml
@@ -17,15 +17,20 @@
         android:layout_marginBottom="16dp"
         android:hint="Pilih user ID 1 - 250" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/search_button"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Search"
         android:layout_below="@id/search_bar"
-        android:layout_marginTop="8dp"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="16dp"/>
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/bg_btn"
+        android:text="Search"
+        android:textColor="@color/white" />
+
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -40,7 +45,6 @@
         android:layout_height="match_parent"
         android:layout_below="@id/search_button"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp" />
 </RelativeLayout>
