--- a/app/src/main/res/layout/cards_place.xml
+++ b/app/src/main/res/layout/cards_place.xml
@@ -10,89 +10,91 @@
     android:layout_marginTop="4dp"
     android:layout_marginEnd="8dp"
     android:layout_marginBottom="4dp"
+    android:background="@drawable/card_border"
     card_view:cardCornerRadius="10dp"
     card_view:cardElevation="0dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="138dp"
-        android:padding="8dp">
+<androidx.constraintlayout.widget.ConstraintLayout
+android:layout_width="match_parent"
+android:layout_height="138dp"
+android:padding="8dp">
 
-        <ImageView
-            android:id="@+id/img_item_photo"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:scaleType="centerCrop"
-            card_view:layout_constraintBottom_toBottomOf="parent"
-            card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/mountain_image" />
+<ImageView
+    android:id="@+id/img_item_photo"
+    android:layout_width="100dp"
+    android:layout_height="100dp"
+    android:scaleType="centerCrop"
+    card_view:layout_constraintBottom_toBottomOf="parent"
+    card_view:layout_constraintStart_toStartOf="parent"
+    card_view:layout_constraintTop_toTopOf="parent"
+    tools:src="@drawable/mountain_image" />
 
-        <TextView
-            android:id="@+id/tv_item_name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="8dp"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintHorizontal_bias="1.0"
-            card_view:layout_constraintStart_toEndOf="@id/img_item_photo"
-            card_view:layout_constraintTop_toTopOf="@id/img_item_photo"
-            tools:text="@string/places_name" />
+<TextView
+    android:id="@+id/tv_item_name"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="8dp"
+    android:layout_marginTop="24dp"
+    android:layout_marginEnd="8dp"
+    android:textSize="16sp"
+    android:textStyle="bold"
+    card_view:layout_constraintEnd_toEndOf="parent"
+    card_view:layout_constraintHorizontal_bias="1.0"
+    card_view:layout_constraintStart_toEndOf="@id/img_item_photo"
+    card_view:layout_constraintTop_toTopOf="@id/img_item_photo"
+    tools:text="@string/places_name" />
 
-        <TextView
-            android:id="@+id/tv_asal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:textColor="@color/location"
-            android:textSize="12sp"
-            card_view:layout_constraintStart_toEndOf="@+id/img_item_photo"
-            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_name"
-            tools:ignore="SmallSp"
-            tools:text="Malang,Indonesia" />
+<TextView
+    android:id="@+id/tv_asal"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="8dp"
+    android:layout_marginTop="8dp"
+    android:textColor="@color/location"
+    android:textSize="12sp"
+    card_view:layout_constraintStart_toEndOf="@+id/img_item_photo"
+    card_view:layout_constraintTop_toBottomOf="@+id/tv_item_name"
+    tools:ignore="SmallSp"
+    tools:text="Malang,Indonesia" />
 
-        <RatingBar
-            android:id="@+id/ratingBar"
-            style="@style/Widget.AppCompat.RatingBar.Small"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="36dp"
-            android:isIndicator="true"
-            android:numStars="5"
-            android:rating="4.5"
-            android:stepSize="0.1"
-            card_view:layout_constraintStart_toEndOf="@id/img_item_photo"
-            card_view:layout_constraintTop_toBottomOf="@id/tv_item_name" />
+<RatingBar
+    android:id="@+id/ratingBar"
+    style="@style/Widget.AppCompat.RatingBar.Small"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="8dp"
+    android:layout_marginTop="36dp"
+    android:isIndicator="true"
+    android:numStars="1"
+    android:rating="1"
+    android:stepSize="0.1"
+    card_view:layout_constraintStart_toEndOf="@id/img_item_photo"
+    card_view:layout_constraintTop_toBottomOf="@id/tv_item_name"
+    />
 
-        <TextView
-            android:id="@+id/textViewRatingValue"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginBottom="16dp"
-            android:textColor="@color/grey"
-            android:text="4.5"
-            card_view:layout_constraintBottom_toBottomOf="parent"
-            card_view:layout_constraintStart_toEndOf="@+id/ratingBar" />
+<TextView
+    android:id="@+id/textViewRatingValue"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="8dp"
+    android:layout_marginBottom="16dp"
+    android:textColor="@color/grey"
+    android:text="4.5"
+    card_view:layout_constraintBottom_toBottomOf="parent"
+    card_view:layout_constraintStart_toEndOf="@+id/ratingBar" />
 
-        <TextView
-            android:id="@+id/textViewPriceIndicator"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginBottom="16dp"
-            android:textColor="@color/rating"
-            android:text="$$$"
-            card_view:layout_constraintBottom_toBottomOf="parent"
-            card_view:layout_constraintStart_toEndOf="@+id/textViewRatingValue" />
+<TextView
+    android:id="@+id/textViewPriceIndicator"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="20dp"
+    android:layout_marginBottom="16dp"
+    android:textColor="@color/rating"
+    android:text="$$$"
+    card_view:layout_constraintBottom_toBottomOf="parent"
+    card_view:layout_constraintStart_toEndOf="@+id/textViewRatingValue" />
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
