--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
     <resources>
-        <color name="white">#FFFFFF</color>
-        <color name="black">#000000</color>
-        <color name="orange">#FFA500</color>
-        <color name="blue">#007BFF</color>
-        <color name="color_primary">#007BFF</color>
-        <color name="grey">#777777</color>
-        <color name="location">#1C9FE2</color>
-        <color name="bluedark">#00296B</color>
-        <color name="rating">#FFDD2D</color>
-        <color name="harga">#F05C35</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="orange">#FFA500</color>
+    <color name="blue">#007BFF</color>
+    <color name="color_primary">#007BFF</color>
+    <color name="secondgrey">#8D94A2</color>
+    <color name="grey">#777777</color>
+    <color name="location">#1C9FE2</color>
+    <color name="bluedark">#00296B</color>
+    <color name="rating">#FFDD2D</color>
+    <color name="harga">#F05C35</color>
 </resources>
